--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -1,5 +1,11 @@
 /* style carte*/
+.fonctionnementetapes{
+    list-style: none;
+    counter-reset: compteListe;
+}
+
 .fonctionnementcarte{
+    display: flex;
     background-color: $background;
     @include cardradiusandshadow();
     padding: 1.5rem 1.5rem;
@@ -7,6 +13,21 @@
     flex: 30%;
     margin-right: 25px;
     position: relative;
+}
+
+.fonctionnementcarte::after{
+    counter-increment: compteListe 1;
+    content: counter(compteListe) " ";
+    background: $primary;
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    position: absolute;
+    left: -.75rem;
 }
 
 .foodcard{
@@ -70,7 +91,7 @@
     .favorite{
         grid-column: 2;
         text-align: right;
-        grid-row: 1;
+        grid-row: 1/3;
     }
 }
 /* style carte*/
