--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -47,12 +47,18 @@
 }
 
 .iconback {
-  font-size: 30px;
-  margin-top: 5px;
+  font-size: 20px;
+  margin-top: 12px;
 }
 
 /* style carte*/
+.fonctionnementetapes {
+  list-style: none;
+  counter-reset: compteListe;
+}
+
 .fonctionnementcarte {
+  display: flex;
   background-color: #fafafa;
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
@@ -61,6 +67,21 @@
   flex: 30%;
   margin-right: 25px;
   position: relative;
+}
+
+.fonctionnementcarte::after {
+  counter-increment: compteListe 1;
+  content: counter(compteListe) " ";
+  background: #9356DC;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  position: absolute;
+  left: -0.75rem;
 }
 
 .foodcard {
@@ -127,7 +148,7 @@
 .restaurantcartes .favorite {
   grid-column: 2;
   text-align: right;
-  grid-row: 1;
+  grid-row: 1/3;
 }
 
 /* style carte*/
@@ -139,7 +160,7 @@
   padding-bottom: 15px;
 }
 .header i {
-  padding-left: 15px;
+  padding-left: 35px;
 }
 
 .logo {
@@ -167,6 +188,7 @@ body {
   text-align: center;
   background-color: #f3f3f3;
   padding: 0.75rem 1.5rem;
+  background-color: #f3f3f3;
 }
 .localisation span {
   margin-left: 10px;
@@ -255,7 +277,7 @@ body {
 .menu .menutitle {
   flex-basis: 95%;
   font-size: 1em;
-  margin-left: 20px;
+  margin-left: 14px;
 }
 .menu .menuicone {
   flex-basis: 5%;
@@ -279,6 +301,18 @@ body {
 
 .foodtitle {
   margin-left: 15px;
+  position: relative;
+  padding-bottom: 0.5rem;
+}
+
+.foodtitle:after {
+  content: "";
+  width: 3rem;
+  height: 0.25rem;
+  background-color: #99E2D0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .commander {
@@ -310,6 +344,9 @@ body {
 .footer ul {
   list-style: none;
 }
+.footer a {
+  text-decoration: none;
+}
 .footer li {
   margin-bottom: 5px;
   text-decoration: none;
@@ -331,8 +368,13 @@ body {
 
 /* styledesktop*/
 @media all and (min-width: 950px) {
+  main .restaurants {
+    padding-left: 112px;
+    padding-right: 112px;
+  }
+
   .restaurants .restaurantstitle {
-    margin-left: 55px;
+    margin-left: 61px;
   }
 
   .menu {
@@ -359,34 +401,43 @@ body {
   .carte1 {
     grid-column: 1;
     grid-row: 1;
-    min-width: 500px;
-    max-width: 500px;
+    min-width: 300px;
+    max-width: 750px;
   }
 
   .carte2 {
     grid-column: 2;
     grid-row: 1;
-    min-width: 500px;
-    max-width: 500px;
+    min-width: 300px;
+    max-width: 750px;
   }
 
   .carte3 {
     grid-column: 1;
     grid-row: 2;
-    min-width: 500px;
-    max-width: 500px;
+    min-width: 300px;
+    max-width: 750px;
   }
 
   .carte4 {
     grid-column: 2;
     grid-row: 2;
-    min-width: 500px;
-    max-width: 500px;
+    min-width: 300px;
+    max-width: 750px;
+  }
+
+  .fonctionnement {
+    padding-left: 133px;
+    padding-right: 147px;
   }
 
   .fonctionnementetapes {
     display: flex;
     flex-direction: row;
+  }
+
+  .footer {
+    padding-left: 145px;
   }
 }
 /* styledesktop*//*# sourceMappingURL=style.css.map */
