--- a/layout/composants/_icones.scss
+++ b/layout/composants/_icones.scss
@@ -1,8 +1,45 @@
 .iconheart{
-    font-size:30px
+    font-size:30px;
+    cursor: pointer;
+}
+
+.emptyheart {
+    grid-column: 1;
+    grid-row: 1;
+    font-size:30px;
+    background-image: transparent;
+    display: block;
+    transition: all 0.3s ease; 
+    cursor: pointer;
+    background: transparent;
+    grid-column: 1;
+    grid-row: 1;
+    opacity: 100%;
+    &:active{
+        opacity: 0%;
+    }
+}
+
+
+.fullheart{
+    grid-column: 1;
+    grid-row: 1;
+    cursor: pointer;
+    font-size:30px;
+    display: block;
+    color: #9c47fc;
+    background: -webkit-linear-gradient($primary, $secondary);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    opacity: 100%;
+    &:active{
+        opacity: 0%;
+    }
 }
 
 .iconback{
     font-size:20px;
     margin-top: 12px;
 }
+
