--- a/utils/_mixin.scss
+++ b/utils/_mixin.scss
@@ -8,8 +8,12 @@
     font-weight: 500;
     font-size: 1.1rem;
     color: white;
+    box-shadow: 3px black;
     background-image: linear-gradient( 0deg,rgba(147,86,220,.9),rgba(255,121,218,.9));
     width: 300px;
+    opacity: 100%;
+    box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
+    cursor: pointer;
 }
 
 @mixin photoradius{
