--- a/layout/composants/_icones.scss
+++ b/layout/composants/_icones.scss
@@ -12,9 +12,8 @@
     transition: all 0.3s ease; 
     cursor: pointer;
     background: transparent;
-    grid-column: 1;
-    grid-row: 1;
     opacity: 100%;
+    transition:transform 1000ms ease-in-out;
     &:active{
         opacity: 0%;
     }
@@ -32,9 +31,10 @@
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    opacity: 100%;
+    opacity: 0%;
+    transition:transform 1000ms ease-in-out;
     &:active{
-        opacity: 0%;
+        opacity: 100%;
     }
 }
 
