identation globale code html + test sur animations foodcard :memo:

--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -31,24 +31,54 @@
     left: -.75rem;
 }
 
+@keyframes animationfoodcard {
+    0% {
+        opacity: 0;
+        color: white;
+    }
+    20%{
+        opacity: 0.4;
+        color: darken($color: white, $amount: 20%);
+    }
+    40%{
+        opacity: 0.5;
+        color: darken($color: white, $amount: 40%);
+    }
+    60%{
+        opacity: 0.6;
+        color: darken($color: white, $amount: 40%);
+    }
+    80%{
+        opacity: 0.7;
+        color: darken($color: white, $amount: 80%);
+    }
+    100%{
+        opacity: 1;
+        color: black;
+    }
+}
+
 .foodcard{
     @include cardradiusandshadow();
     cursor: pointer;
     background-color: #fff;
-    display: grid;
-    padding:10px;
+    display: flex;
+    opacity: 1;
+    flex-direction: row;
     margin-bottom: 15px;
     margin-left: 10px;
     margin-right: 10px;
+    .foodtext{
+        flex-basis: 70%;
+    }
     .foodcardtitle{
         margin:0;
-        margin-bottom: -10px;
+        margin-bottom: -8px;
         margin-left: 5px;
         font-weight: 1000;
         font-size: 1em; 
     }
     .foodcarddescription{
-        grid-column: 1;
         margin-bottom: 0;
         margin-left: 5px;
         font-size: 0.9em;
@@ -57,9 +87,49 @@
     .foodcardprice{
         margin-right: 5px;
         margin-bottom: 0;
-        grid-column: 2;
         text-align: right;
         font-weight: 1000;
+        flex-basis: 30%;
+    }
+    .checkcircle{
+        display: flex;
+        background-color: #99E2D0;
+        height: 43px;
+        width: 67px;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        opacity: 1;
+        animation: animationdivcercle 1s ease 0s 1 normal both;
+        overflow: hidden;
+        
+}
+
+.iconecercle{
+    transform-origin: center;
+    &:hover{
+        animation: animationiconecercle 1s ease 0s 1 normal both;
+    } 
+}
+
+@keyframes animationiconecercle {
+    0%{
+        transform: rotate(0deg);
+        opacity: 0;
+        transform: scale(1);
+    }
+    100%{
+        transform: rotate(360deg)
+        opacity: 1;
+        transform: scale(1.25);
+    }   
+}
+
+@keyframes animationdivcercle {
+    0%{
+        
+    }
+    100%{
+        
     }
 }
 
