--- a/layout/composants/_icones.scss
+++ b/layout/composants/_icones.scss
@@ -38,8 +38,34 @@
     }
 }
 
+@keyframes animationheartempty {
+    0% {
+        opacity: 1;
+        z-index: 3;
+    }
+    100%{
+        opacity: 0;
+        z-index: 2;
+    }
+}
+
+@keyframes animationheartfull {
+    0% {
+        opacity: 0;
+        z-index: 3;
+    }
+    100%{
+        opacity: 0;
+        z-index: 1;
+    }
+}
+
 .iconback{
     font-size:20px;
     margin-top: 12px;
 }
 
+.iconecercle{
+    background-color: $tertiary;
+    color: white;
+}
