meilleure compilation selecteur (nesting + BEM) -> Footer

--- a/layout/composants/_bouton.scss
+++ b/layout/composants/_bouton.scss
@@ -1,5 +1,5 @@
 /*style boutons*/
-.explorebutton{
+.explore__button{
     @include cardradiusandshadow();
     @include buttonlayout();
     width: fit-content;
