--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -1,10 +1,10 @@
 /* style carte*/
-.fonctionnementetapes{
+.fonctionnement__etapes{
     list-style: none;
     counter-reset: compteListe;
 }
 
-.fonctionnementcarte{
+.fonctionnement__carte{
     display: flex;
     cursor: pointer;
     background-color: $background;
@@ -16,7 +16,7 @@
     position: relative;
 }
 
-.fonctionnementcarte::after{
+.fonctionnement__carte::after{
     counter-increment: compteListe 1;
     content: counter(compteListe) " ";
     background: $primary;
@@ -101,7 +101,7 @@
         opacity: 1;
         animation: animationdivcercle 1s ease 0s 1 normal both;
         overflow: hidden;
-        
+    } 
 }
 
 .iconecercle{
@@ -118,19 +118,10 @@
         transform: scale(1);
     }
     100%{
-        transform: rotate(360deg)
+        transform: rotate(360deg);
         opacity: 1;
         transform: scale(1.25);
     }   
-}
-
-@keyframes animationdivcercle {
-    0%{
-        
-    }
-    100%{
-        
-    }
 }
 
 .restaurantcartes{
@@ -158,7 +149,7 @@
     h3{
         margin: 0;
     }
-    .restaurantquartier{
+    .restaurant__quartier{
         grid-column: 1;
     }
     .favorite{
