--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -6,7 +6,7 @@
 /* */
 /* */
 /*style boutons*/
-.explorebutton {
+.explore__button {
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
   padding: 0.75rem 1.5rem;
@@ -141,12 +141,12 @@
 }
 
 /* style carte*/
-.fonctionnementetapes {
+.fonctionnement__etapes {
   list-style: none;
   counter-reset: compteListe;
 }
 
-.fonctionnementcarte {
+.fonctionnement__carte {
   display: flex;
   cursor: pointer;
   background-color: #fafafa;
@@ -159,7 +159,7 @@
   position: relative;
 }
 
-.fonctionnementcarte::after {
+.fonctionnement__carte::after {
   counter-increment: compteListe 1;
   content: counter(compteListe) " ";
   background: #9356DC;
@@ -270,8 +270,8 @@
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   opacity: 1;
-  -webkit-animation: animationdivcercle 2s ease 0s 1 normal both;
-          animation: animationdivcercle 2s ease 0s 1 normal both;
+  -webkit-animation: animationdivcercle 1s ease 0s 1 normal both;
+          animation: animationdivcercle 1s ease 0s 1 normal both;
   overflow: hidden;
 }
 
@@ -286,36 +286,26 @@
 @-webkit-keyframes animationiconecercle {
   0% {
     transform: rotate(0deg);
+    opacity: 0;
+    transform: scale(1);
   }
   100% {
     transform: rotate(360deg);
+    opacity: 1;
+    transform: scale(1.25);
   }
 }
 
 @keyframes animationiconecercle {
   0% {
     transform: rotate(0deg);
+    opacity: 0;
+    transform: scale(1);
   }
   100% {
     transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes animationdivcercle {
-  0% {
     opacity: 1;
-    transform: slide;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes animationdivcercle {
-  0% {
-    opacity: 1;
-    transform: slide;
-  }
-  100% {
-    opacity: 1;
+    transform: scale(1.25);
   }
 }
 .restaurantcartes {
@@ -345,7 +335,7 @@
 .restaurantcartes h3 {
   margin: 0;
 }
-.restaurantcartes .restaurantquartier {
+.restaurantcartes .restaurant__quartier {
   grid-column: 1;
 }
 .restaurantcartes .favorite {
@@ -449,18 +439,16 @@ main {
   padding-top: 15px;
   padding-bottom: 15px;
 }
-.header i {
-  padding-left: 35px;
+.header__icon {
+  margin-left: 10px;
 }
-
-.logo {
+.header__logo {
   font-family: Shrikhand;
   flex-basis: 100%;
   margin: auto;
   margin-right: 20px;
 }
-
-.logoindex {
+.header__logoindex {
   margin-right: -7px;
 }
 
@@ -481,7 +469,7 @@ body {
   padding: 0.75rem 1.5rem;
   background-color: #f3f3f3;
 }
-.localisation span {
+.localisation__text {
   margin-left: 10px;
   font-size: 0.8em;
 }
@@ -492,11 +480,11 @@ body {
   background-color: #fafafa;
   padding: 0.75rem 1.5rem;
 }
-.explore .exploretitle {
+.explore__title {
   text-align: center;
   font-size: 1.4rem;
 }
-.explore .exploretext {
+.explore__text {
   text-align: center;
   font-weight: 100;
 }
@@ -506,14 +494,14 @@ body {
   display: flex;
   flex-direction: column;
 }
-.fonctionnement .fonctionnementtitle {
+.fonctionnement__title {
   margin-left: 32px;
 }
-.fonctionnement .fonctionnementtexte {
+.fonctionnement__fonctionnementtexte {
   margin-left: 32px;
 }
 
-.carteimage {
+.restaurant__carteimage {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   width: 100%;
@@ -529,20 +517,19 @@ body {
      object-fit: cover;
 }
 
-.restaurants {
+.restaurant {
   padding-top: 45px;
   padding-bottom: 25px;
   background-color: #fafafa;
   padding-left: 0;
   padding-right: 0;
 }
-.restaurants .restaurantstitle {
+.restaurant__title {
   margin-left: 15px;
   font-family: roboto;
   font-weight: 1000;
 }
-
-.restaurantlegend {
+.restaurant__legend {
   background-color: #99E2D0;
   color: #1b6150;
   padding: 0.5rem;
@@ -594,7 +581,7 @@ body {
           animation: animationfoodcard 100ms linear 400ms normal forwards;
 }
 
-.menuicone {
+.restaurant__menuicone {
   display: grid;
   grid-column: 2;
   grid-row: 1/2;
@@ -631,21 +618,21 @@ body {
   background-color: #353535;
   color: white;
 }
-.footer .footercontent {
+.footer__content {
   padding-top: 15px;
   padding-bottom: 15px;
   font-weight: 100;
 }
-.footer .footerlogo {
+.footer__logo {
   font-family: Shrikhand;
   flex-basis: 100%;
   margin-left: 32px;
 }
-.footer h3 {
+.footer__title {
   font-family: Shrikhand;
   margin-left: 32px;
 }
-.footer ul {
+.footer__link {
   list-style: none;
 }
 .footer a {
@@ -663,10 +650,10 @@ body {
 .footer li:hover {
   border-color: white;
 }
-.footer .list1 {
+.footer__list1 {
   margin-right: 12px;
 }
-.footer .list2 {
+.footer__list2 {
   margin-right: 4px;
 }
 
@@ -701,7 +688,7 @@ body {
     flex-direction: row;
   }
 
-  .cartecontainer {
+  .restaurants__cartecontainer {
     display: grid;
     margin-left: 50px;
     margin-right: 50px;
@@ -739,8 +726,7 @@ body {
     padding-left: 133px;
     padding-right: 147px;
   }
-
-  .fonctionnementetapes {
+  .fonctionnement__etapes {
     display: flex;
     flex-direction: row;
   }
