--- a/layout/composants/_icones.scss
+++ b/layout/composants/_icones.scss
@@ -3,17 +3,15 @@
     cursor: pointer;
 }
 
-.emptyheart {
+.emptyheart{
     grid-column: 1;
     grid-row: 1;
     font-size:30px;
     background-image: transparent;
-    display: block;
     transition: all 0.3s ease; 
     cursor: pointer;
     background: transparent;
     opacity: 100%;
-    transition:transform 1000ms ease-in-out;
     &:active{
         opacity: 0%;
     }
@@ -32,40 +30,23 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     opacity: 0%;
-    transition:transform 1000ms ease-in-out;
     &:active{
         opacity: 100%;
-    }
-}
-
-@keyframes animationheartempty {
-    0% {
-        opacity: 1;
-        z-index: 3;
-    }
-    100%{
-        opacity: 0;
-        z-index: 2;
-    }
-}
-
-@keyframes animationheartfull {
-    0% {
-        opacity: 0;
-        z-index: 3;
-    }
-    100%{
-        opacity: 0;
-        z-index: 1;
     }
 }
 
 .iconback{
     font-size:20px;
     margin-top: 12px;
+    margin-left: 12px;
 }
 
 .iconecercle{
     background-color: $tertiary;
     color: white;
+    transform-origin: center;
+    &:hover{
+        animation: animationiconecercle 1s ease 0s 1 normal both;
+    } 
 }
+
