--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -60,12 +60,10 @@
   grid-row: 1;
   font-size: 30px;
   background-image: transparent;
-  display: block;
   transition: all 0.3s ease;
   cursor: pointer;
   background: transparent;
   opacity: 100%;
-  transition: transform 1000ms ease-in-out;
 }
 .emptyheart:active {
   opacity: 0%;
@@ -83,61 +81,25 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 0%;
-  transition: transform 1000ms ease-in-out;
 }
 .fullheart:active {
   opacity: 100%;
 }
 
-@-webkit-keyframes animationheartempty {
-  0% {
-    opacity: 1;
-    z-index: 3;
-  }
-  100% {
-    opacity: 0;
-    z-index: 2;
-  }
-}
-
-@keyframes animationheartempty {
-  0% {
-    opacity: 1;
-    z-index: 3;
-  }
-  100% {
-    opacity: 0;
-    z-index: 2;
-  }
-}
-@-webkit-keyframes animationheartfull {
-  0% {
-    opacity: 0;
-    z-index: 3;
-  }
-  100% {
-    opacity: 0;
-    z-index: 1;
-  }
-}
-@keyframes animationheartfull {
-  0% {
-    opacity: 0;
-    z-index: 3;
-  }
-  100% {
-    opacity: 0;
-    z-index: 1;
-  }
-}
 .iconback {
   font-size: 20px;
   margin-top: 12px;
+  margin-left: 12px;
 }
 
 .iconecercle {
   background-color: #99E2D0;
   color: white;
+  transform-origin: center;
+}
+.iconecercle:hover {
+  -webkit-animation: animationiconecercle 1s ease 0s 1 normal both;
+          animation: animationiconecercle 1s ease 0s 1 normal both;
 }
 
 /* style carte*/
@@ -158,6 +120,10 @@
   margin-right: 25px;
   position: relative;
 }
+.fonctionnement__carte:hover {
+  background-color: white;
+  border: 1px solid grey;
+}
 
 .fonctionnement__carte::after {
   counter-increment: compteListe 1;
@@ -174,59 +140,6 @@
   left: -0.75rem;
 }
 
-@-webkit-keyframes animationfoodcard {
-  0% {
-    opacity: 0;
-    color: white;
-  }
-  20% {
-    opacity: 0.4;
-    color: #cccccc;
-  }
-  40% {
-    opacity: 0.5;
-    color: #999999;
-  }
-  60% {
-    opacity: 0.6;
-    color: #999999;
-  }
-  80% {
-    opacity: 0.7;
-    color: #333333;
-  }
-  100% {
-    opacity: 1;
-    color: black;
-  }
-}
-
-@keyframes animationfoodcard {
-  0% {
-    opacity: 0;
-    color: white;
-  }
-  20% {
-    opacity: 0.4;
-    color: #cccccc;
-  }
-  40% {
-    opacity: 0.5;
-    color: #999999;
-  }
-  60% {
-    opacity: 0.6;
-    color: #999999;
-  }
-  80% {
-    opacity: 0.7;
-    color: #333333;
-  }
-  100% {
-    opacity: 1;
-    color: black;
-  }
-}
 .foodcard {
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
@@ -239,23 +152,23 @@
   margin-left: 10px;
   margin-right: 10px;
 }
-.foodcard .foodtext {
-  flex-basis: 70%;
+.foodcard__text {
+  flex-basis: 90%;
 }
-.foodcard .foodcardtitle {
+.foodcard__title {
   margin: 0;
   margin-bottom: -8px;
   margin-left: 5px;
   font-weight: 1000;
   font-size: 1em;
 }
-.foodcard .foodcarddescription {
+.foodcard__description {
   margin-bottom: 0;
   margin-left: 5px;
   font-size: 0.9em;
   font-weight: 100;
 }
-.foodcard .foodcardprice {
+.foodcard__price {
   margin-right: 5px;
   margin-bottom: 0;
   text-align: right;
@@ -270,75 +183,38 @@
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   opacity: 1;
-  -webkit-animation: animationdivcercle 1s ease 0s 1 normal both;
-          animation: animationdivcercle 1s ease 0s 1 normal both;
-  overflow: hidden;
 }
 
-.iconecercle {
-  transform-origin: center;
-}
-.iconecercle:hover {
-  -webkit-animation: animationiconecercle 1s ease 0s 1 normal both;
-          animation: animationiconecercle 1s ease 0s 1 normal both;
-}
-
-@-webkit-keyframes animationiconecercle {
-  0% {
-    transform: rotate(0deg);
-    opacity: 0;
-    transform: scale(1);
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 1;
-    transform: scale(1.25);
-  }
-}
-
-@keyframes animationiconecercle {
-  0% {
-    transform: rotate(0deg);
-    opacity: 0;
-    transform: scale(1);
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 1;
-    transform: scale(1.25);
-  }
-}
-.restaurantcartes {
+.restaurant__cartes {
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
-  cursor: pointer;
   margin-bottom: 50px;
   margin-left: 10px;
   margin-right: 10px;
   transform: scale(1);
   transition-property: transform;
   transition-duration: 500ms;
+  cursor: pointer;
 }
-.restaurantcartes .carte {
+.restaurant__cartes .restaurant__carteslink {
   text-decoration: none;
 }
-.restaurantcartes:hover {
+.restaurant__cartes .restaurant__carteslink:hover {
   transform: scale(1.03);
 }
-.restaurantcartes footer {
+.restaurant__cartes footer {
   display: grid;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 5px;
   padding: 10px;
   color: black;
 }
-.restaurantcartes h3 {
+.restaurant__cartes h3 {
   margin: 0;
 }
-.restaurantcartes .restaurant__quartier {
+.restaurant__cartes .restaurant__quartier {
   grid-column: 1;
 }
-.restaurantcartes .favorite {
+.restaurant__cartes .favorite {
   grid-column: 2;
   text-align: right;
   grid-row: 1/3;
@@ -354,13 +230,10 @@
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
-.explorebtn {
-  transition-duration: 0.25s;
-}
-.explorebtn:hover {
-  opacity: 80%;
-  box-shadow: 25px black;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+.explore__button:hover {
+  background-color: #d638c6;
+  border: 1px groove white;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 .loadingspinnercontainer {
@@ -432,6 +305,108 @@ main {
     opacity: 1;
   }
 }
+@-webkit-keyframes animationfoodcard {
+  0% {
+    opacity: 0;
+    color: white;
+  }
+  20% {
+    opacity: 0.4;
+    color: #cccccc;
+  }
+  40% {
+    opacity: 0.5;
+    color: #999999;
+  }
+  60% {
+    opacity: 0.6;
+    color: #999999;
+  }
+  80% {
+    opacity: 0.7;
+    color: #333333;
+  }
+  100% {
+    opacity: 1;
+    color: black;
+  }
+}
+@keyframes animationfoodcard {
+  0% {
+    opacity: 0;
+    color: white;
+  }
+  20% {
+    opacity: 0.4;
+    color: #cccccc;
+  }
+  40% {
+    opacity: 0.5;
+    color: #999999;
+  }
+  60% {
+    opacity: 0.6;
+    color: #999999;
+  }
+  80% {
+    opacity: 0.7;
+    color: #333333;
+  }
+  100% {
+    opacity: 1;
+    color: black;
+  }
+}
+@-webkit-keyframes animationiconecercle {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes animationiconecercle {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/*Keyframes test pour améliorer l'animation sur le coeur*/
+@-webkit-keyframes animationheartempty {
+  0% {
+    opacity: 100%;
+  }
+  100% {
+    opacity: 0%;
+  }
+}
+@keyframes animationheartempty {
+  0% {
+    opacity: 100%;
+  }
+  100% {
+    opacity: 0%;
+  }
+}
+@-webkit-keyframes animationheartfull {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+@keyframes animationheartfull {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+/*Keyframes test pour améliorer l'animation sur le coeur*/
 /* styleheader*/
 .header {
   display: flex;
@@ -462,6 +437,8 @@ body {
 }
 
 .localisation {
+  display: flex;
+  justify-content: center;
   font-weight: 600;
   font-size: 1.3rem;
   text-align: center;
@@ -497,20 +474,11 @@ body {
 .fonctionnement__title {
   margin-left: 32px;
 }
-.fonctionnement__fonctionnementtexte {
+.fonctionnement__texte {
   margin-left: 32px;
 }
 
-.restaurant__carteimage {
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  width: 100%;
-  height: 200px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.backgroundpicture {
+.background__picture {
   width: 100%;
   height: 320px;
   -o-object-fit: cover;
@@ -525,7 +493,7 @@ body {
   padding-right: 0;
 }
 .restaurant__title {
-  margin-left: 15px;
+  margin-left: 32px;
   font-family: roboto;
   font-weight: 1000;
 }
@@ -538,50 +506,15 @@ body {
   top: 1rem;
   right: 0.75rem;
 }
-
-.menu {
-  background-color: #fafafa;
-  border-top-left-radius: 35px;
-  border-top-right-radius: 35px;
-  position: relative;
-  margin-top: -65px;
+.restaurant__carteimage {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-.menu .menuheader {
-  font-family: Shrikhand;
-  font-size: 1.5em;
-  padding-top: 25px;
-  display: flex;
-}
-.menu .menutitle {
-  flex-basis: 95%;
-  font-size: 1em;
-  margin-left: 14px;
-}
-.menu i {
-  margin: auto;
-}
-.menu .menucontainer {
-  display: block;
-}
-.menu .entrées {
-  flex: 31%;
-  -webkit-animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
-          animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
-}
-.menu .plats {
-  flex: 32%;
-  opacity: 0;
-  -webkit-animation: animationfoodcard 100ms linear 200ms normal forwards;
-          animation: animationfoodcard 100ms linear 200ms normal forwards;
-}
-.menu .dessert {
-  flex: 31%;
-  opacity: 0;
-  -webkit-animation: animationfoodcard 100ms linear 400ms normal forwards;
-          animation: animationfoodcard 100ms linear 400ms normal forwards;
-}
-
-.restaurant__menuicone {
+.restaurant__menufavorite {
   display: grid;
   grid-column: 2;
   grid-row: 1/2;
@@ -590,12 +523,63 @@ body {
   margin-right: 10px;
 }
 
+.menu {
+  background-color: #fafafa;
+  border-top-left-radius: 35px;
+  border-top-right-radius: 35px;
+  position: relative;
+  margin-top: -65px;
+}
+.menu__header {
+  font-family: Shrikhand;
+  font-size: 1.5em;
+  padding-top: 22px;
+  display: flex;
+}
+.menu__title {
+  font-family: Shrikhand;
+  flex-basis: 95%;
+  font-size: 1em;
+  margin-left: 14px;
+}
+.menu__favorite {
+  margin-right: 10px;
+  display: grid;
+  grid-column: 2;
+  grid-row: 1/2;
+  text-align: right;
+  flex-basis: 5%;
+  margin-right: 10px;
+}
+.menu__icone {
+  margin: auto;
+}
+.menu__container {
+  display: block;
+}
+.menu__entrées {
+  flex-basis: 31%;
+  -webkit-animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
+          animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
+}
+.menu__plats {
+  flex-basis: 32%;
+  opacity: 0;
+  -webkit-animation: animationfoodcard 100ms linear 200ms normal forwards;
+          animation: animationfoodcard 100ms linear 200ms normal forwards;
+}
+.menu__dessert {
+  flex-basis: 31%;
+  opacity: 0;
+  -webkit-animation: animationfoodcard 100ms linear 400ms normal forwards;
+          animation: animationfoodcard 100ms linear 400ms normal forwards;
+}
+
 .foodtitle {
   margin-left: 15px;
   position: relative;
   padding-bottom: 0.5rem;
 }
-
 .foodtitle:after {
   content: "";
   width: 3rem;
@@ -669,66 +653,60 @@ body {
     padding-right: 112px;
   }
 
-  .restaurants .restaurantstitle {
-    margin-left: 61px;
+  .restaurants__title {
+    text-align: center;
   }
 
   .menu {
     margin-left: 175px;
     margin-right: 175px;
   }
-
-  .menu .menutitle {
+  .menu__title {
     font-size: 1.24em;
     margin-left: 32px;
   }
-
-  .menu .menucontainer {
+  .menu__container {
     display: flex;
     flex-direction: row;
   }
 
   .restaurants__cartecontainer {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     margin-left: 50px;
     margin-right: 50px;
+    justify-content: center;
   }
 
   .carte1 {
-    grid-column: 1;
-    grid-row: 1;
-    min-width: 300px;
-    max-width: 750px;
+    min-width: 525px;
+    max-width: 525px;
   }
 
   .carte2 {
-    grid-column: 2;
-    grid-row: 1;
-    min-width: 300px;
-    max-width: 750px;
+    min-width: 525px;
+    max-width: 525px;
   }
 
   .carte3 {
-    grid-column: 1;
-    grid-row: 2;
-    min-width: 300px;
-    max-width: 750px;
+    min-width: 525px;
+    max-width: 525px;
   }
 
   .carte4 {
-    grid-column: 2;
-    grid-row: 2;
-    min-width: 300px;
-    max-width: 750px;
+    min-width: 525px;
+    max-width: 525px;
   }
 
   .fonctionnement {
     padding-left: 133px;
     padding-right: 147px;
+    text-align: center;
+    align-items: center;
   }
   .fonctionnement__etapes {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
 
   .footer {
