--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -2,6 +2,8 @@
 .fonctionnement__etapes{
     list-style: none;
     counter-reset: compteListe;
+    display: flex;
+    flex-direction: column;
 }
 
 .fonctionnement__carte{
@@ -11,12 +13,10 @@
     @include cardradiusandshadow();
     padding: 1.5rem 1.5rem;
     margin-bottom: 20px;
-    flex: 30%;
     margin-right: 25px;
     position: relative;
     &:hover{
-        background-color: lighten($background, $amount: 10%);
-        border: 1px solid grey;
+        background-color: #FBEFFD;
     }
 }
 
@@ -79,16 +79,17 @@
     } 
 }
 
-.restaurant__cartes{
+.restaurants__cartes{
     @include cardradiusandshadow();
-    margin-bottom: 50px;
+    background-color: #fff;
+    margin-bottom: 20px;
     margin-left: 10px;
     margin-right: 10px;
     transform:scale(1);
     transition-property: transform;
     transition-duration: 500ms;
     cursor: pointer;
-    .restaurant__carteslink{
+    .restaurants__carteslink{
             text-decoration:none;
                 &:hover{
                 transform: scale(1.03);
@@ -103,7 +104,7 @@
     h3{
         margin: 0;
     }
-    .restaurant__quartier{
+    .restaurants__quartier{
         grid-column: 1;
     }
     .favorite{
