--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -15,6 +15,7 @@
   color: white;
   box-shadow: 3px black;
   background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  background-color: #686868;
   width: 300px;
   opacity: 100%;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
@@ -37,6 +38,7 @@
   color: white;
   box-shadow: 3px black;
   background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  background-color: #686868;
   width: 300px;
   opacity: 100%;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
@@ -50,6 +52,10 @@
 }
 
 /*style boutons*/
+.fonctionnementicone:hover {
+  color: #9356DC;
+}
+
 .iconheart {
   font-size: 30px;
   cursor: pointer;
@@ -106,6 +112,8 @@
 .fonctionnement__etapes {
   list-style: none;
   counter-reset: compteListe;
+  display: flex;
+  flex-direction: column;
 }
 
 .fonctionnement__carte {
@@ -116,13 +124,11 @@
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
   padding: 1.5rem 1.5rem;
   margin-bottom: 20px;
-  flex: 30%;
   margin-right: 25px;
   position: relative;
 }
 .fonctionnement__carte:hover {
-  background-color: white;
-  border: 1px solid grey;
+  background-color: #FBEFFD;
 }
 
 .fonctionnement__carte::after {
@@ -185,10 +191,11 @@
   opacity: 1;
 }
 
-.restaurant__cartes {
+.restaurants__cartes {
   border-radius: 20px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
-  margin-bottom: 50px;
+  background-color: #fff;
+  margin-bottom: 20px;
   margin-left: 10px;
   margin-right: 10px;
   transform: scale(1);
@@ -196,25 +203,25 @@
   transition-duration: 500ms;
   cursor: pointer;
 }
-.restaurant__cartes .restaurant__carteslink {
+.restaurants__cartes .restaurants__carteslink {
   text-decoration: none;
 }
-.restaurant__cartes .restaurant__carteslink:hover {
+.restaurants__cartes .restaurants__carteslink:hover {
   transform: scale(1.03);
 }
-.restaurant__cartes footer {
+.restaurants__cartes footer {
   display: grid;
   margin-left: 5px;
   padding: 10px;
   color: black;
 }
-.restaurant__cartes h3 {
+.restaurants__cartes h3 {
   margin: 0;
 }
-.restaurant__cartes .restaurant__quartier {
+.restaurants__cartes .restaurants__quartier {
   grid-column: 1;
 }
-.restaurant__cartes .favorite {
+.restaurants__cartes .favorite {
   grid-column: 2;
   text-align: right;
   grid-row: 1/3;
@@ -225,15 +232,13 @@
   transition-duration: 0.25s;
 }
 .commanderbtn:hover {
-  opacity: 80%;
-  box-shadow: 25px black;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+  background-color: #fff;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.5);
 }
 
 .explore__button:hover {
-  background-color: #d638c6;
-  border: 1px groove white;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  background-color: #fff;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.5);
 }
 
 .loadingspinnercontainer {
@@ -411,8 +416,9 @@ main {
 .header {
   display: flex;
   text-align: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
 }
 .header__icon {
   margin-left: 10px;
@@ -448,7 +454,8 @@ body {
 }
 .localisation__text {
   margin-left: 10px;
-  font-size: 0.8em;
+  margin-top: 4px;
+  font-size: 1.2rem;
 }
 
 .explore {
@@ -476,6 +483,7 @@ body {
 }
 .fonctionnement__texte {
   margin-left: 32px;
+  color: black;
 }
 
 .background__picture {
@@ -485,19 +493,19 @@ body {
      object-fit: cover;
 }
 
-.restaurant {
+.restaurants {
+  background-color: #fafafa;
   padding-top: 45px;
   padding-bottom: 25px;
-  background-color: #fafafa;
   padding-left: 0;
   padding-right: 0;
 }
-.restaurant__title {
+.restaurants__title {
   margin-left: 32px;
   font-family: roboto;
   font-weight: 1000;
 }
-.restaurant__legend {
+.restaurants__legend {
   background-color: #99E2D0;
   color: #1b6150;
   padding: 0.5rem;
@@ -506,7 +514,7 @@ body {
   top: 1rem;
   right: 0.75rem;
 }
-.restaurant__carteimage {
+.restaurants__carteimage {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   width: 100%;
@@ -514,7 +522,7 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.restaurant__menufavorite {
+.restaurants__menufavorite {
   display: grid;
   grid-column: 2;
   grid-row: 1/2;
@@ -653,13 +661,13 @@ body {
     padding-right: 112px;
   }
 
-  .restaurants__title {
+  main .restaurants__headtitle {
     text-align: center;
   }
 
   .menu {
-    margin-left: 175px;
-    margin-right: 175px;
+    margin-left: 140px;
+    margin-right: 140px;
   }
   .menu__title {
     font-size: 1.24em;
@@ -706,7 +714,7 @@ body {
   }
   .fonctionnement__etapes {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
   }
 
   .footer {
