--- a/layout/sass/style.scss
+++ b/layout/sass/style.scss
@@ -9,8 +9,9 @@
 .header{
     display: flex;
     text-align: center;
-    padding-top:15px;
-    padding-bottom:15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    box-shadow: 0 0 0.5rem rgb(0 0 0 / 25%);
         &__icon{
             margin-left: 10px;
         }
@@ -45,7 +46,8 @@ body{
     background-color: #f3f3f3;
     &__text{
         margin-left: 10px;
-        font-size: 0.8em;
+        margin-top:4px;
+        font-size: 1.2rem;
     }
 }
 
@@ -73,6 +75,7 @@ body{
         }
         &__texte{
         margin-left: 32px;
+        color: black;
         }
 }
 
@@ -82,10 +85,10 @@ body{
     object-fit: cover;
 }
 
-.restaurant{
+.restaurants{
+    background-color: #fafafa;
     padding-top:45px;
     padding-bottom:25px;
-    background-color: $background;
     padding-left: 0;
     padding-right: 0;
     &__title{
