--- a/layout/composants/_bouton.scss
+++ b/layout/composants/_bouton.scss
@@ -4,7 +4,8 @@
     @include buttonlayout();
     width: fit-content;
     margin: auto;
-    margin-bottom: 15px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     border: none;
     font-weight: 600;
 }
