--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -20,11 +20,16 @@
   opacity: 100%;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+  font-weight: 100;
+  font-size: 1em;
+  padding-top: 15px;
+  padding-bottom: 15px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   margin: auto;
-  margin-bottom: 15px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   border: none;
   font-weight: 600;
 }
@@ -43,6 +48,10 @@
   opacity: 100%;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+  font-weight: 100;
+  font-size: 1em;
+  padding-top: 15px;
+  padding-bottom: 15px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -417,9 +426,10 @@ main {
 .header {
   display: flex;
   text-align: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  padding-left: 14px;
 }
 .header__icon {
   margin-left: 10px;
@@ -433,7 +443,7 @@ main {
 /* styleheader*/
 /* style main*/
 body {
-  font-family: roboto;
+  font-family: "Roboto", sans-serif;
   margin: 0px;
   width: 100%;
   z-index: 2;
@@ -445,9 +455,9 @@ body {
   font-weight: 600;
   font-size: 1.3rem;
   text-align: center;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
   background-color: #f3f3f3;
   padding: 0.75rem 1.5rem;
-  background-color: #f3f3f3;
 }
 .localisation__text {
   margin-left: 10px;
@@ -468,10 +478,12 @@ body {
 .explore__text {
   text-align: center;
   font-weight: 100;
+  margin: 0;
 }
 
 .fonctionnement {
   margin-top: 30px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
 }
@@ -494,8 +506,11 @@ body {
   background-color: #fafafa;
   padding-top: 45px;
   padding-bottom: 25px;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.restaurants__headtitle {
+  padding-left: 13px;
 }
 .restaurants__title {
   margin-left: 32px;
@@ -515,7 +530,7 @@ body {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   width: 100%;
-  height: 200px;
+  height: 180px;
   -o-object-fit: cover;
      object-fit: cover;
 }
