--- a/layout/sass/style.scss
+++ b/layout/sass/style.scss
@@ -9,9 +9,10 @@
 .header{
     display: flex;
     text-align: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     box-shadow: 0 0 0.5rem rgb(0 0 0 / 25%);
+    padding-left: 14px;
         &__icon{
             margin-left: 10px;
         }
@@ -25,7 +26,7 @@
 
 /* style main*/
 body{
-    font-family: roboto;
+    font-family: 'Roboto', sans-serif;
     margin:0px;
     width: 100%;
     z-index: 2;
@@ -37,9 +38,9 @@ body{
     font-weight: 600;
     font-size: 1.3rem;
     text-align: center;
+    box-shadow: 0 0 0.5rem rgb(0 0 0 / 25%);
     background-color: #f3f3f3;
     padding: .75rem 1.5rem;
-    background-color: #f3f3f3;
     &__text{
         margin-left: 10px;
         margin-top:4px;
@@ -59,11 +60,13 @@ body{
     &__text{
         text-align: center;
         font-weight: 100;
+        margin: 0;
     }
 }
 
 .fonctionnement{
     margin-top:30px;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
         &__title{
@@ -85,8 +88,11 @@ body{
     background-color: #fafafa;
     padding-top:45px;
     padding-bottom:25px;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    &__headtitle{
+        padding-left: 13px;
+    }
     &__title{
         margin-left:32px;
         font-family:roboto ;
@@ -98,7 +104,7 @@ body{
     &__carteimage{
         @include photoradius();
         width: 100%;
-        height: 200px;
+        height: 180px;
         object-fit: cover;
     }
     &__menufavorite{
