--- a/utils/_mixin.scss
+++ b/utils/_mixin.scss
@@ -15,6 +15,10 @@
     opacity: 100%;
     box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
     cursor: pointer;
+    font-weight: 100;
+    font-size: 1em;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 @mixin photoradius{
