--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -17,6 +17,15 @@
     position: relative;
     &:hover{
         background-color: #FBEFFD;
+        .fonctionnement__icone{
+            color: $primary;
+        }
+    }   
+    &.active{
+        background-color: #FBEFFD;
+        .fonctionnement__icone{
+            color: $primary;
+        } 
     }
 }
 
@@ -47,13 +56,14 @@
         margin-right: 10px;
             &__text{
             flex-basis: 90%;
+            padding: 10px;
         }
             &__title{
             margin:0;
             margin-bottom: -8px;
             margin-left: 5px;
-            font-weight: 1000;
             font-size: 1em; 
+            font-weight: 500;
         }
             &__description{
             margin-bottom: 0;
@@ -64,14 +74,14 @@
             &__price{
             margin-right: 5px;
             margin-bottom: 0;
+            margin-top: 30px;
             text-align: right;
-            font-weight: 1000;
-            flex-basis: 30%;
+            font-weight: 500;
+            flex-basis: 100%;
         }
     .checkcircle{
-        display: flex;
+        display: none;
         background-color: #99E2D0;
-        height: 43px;
         width: 67px;
         border-top-right-radius: 20px;
         border-bottom-right-radius: 20px;
@@ -98,13 +108,17 @@
     footer{
         display: grid;
         margin-left: 5px;
-        padding: 10px;
+        padding: 12px;
         color: black;
     }
     h3{
-        margin: 0;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-bottom: 3px;
+        margin-left: 0px;
     }
     .restaurants__quartier{
+        font-weight: 100;
         grid-column: 1;
     }
     .favorite{
@@ -113,5 +127,10 @@
         grid-row: 1/3;
     }
 }
-/* style carte*/
 
+.carte2{
+    .fullheart{
+        opacity: 100%;
+    }
+}
+/* style carte*/
