--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -7,23 +7,19 @@
 /* */
 /*style boutons*/
 .explore__button {
-  border-radius: 20px;
-  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
-  padding: 0.75rem 1.5rem;
-  font-weight: 500;
-  font-size: 1.1rem;
-  color: white;
-  box-shadow: 3px black;
-  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  background-color: #686868;
-  width: 300px;
-  opacity: 100%;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
-  font-weight: 100;
-  font-size: 1em;
+  border-radius: 30px;
   padding-top: 15px;
   padding-bottom: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-weight: 300;
+  font-size: 1em;
+  color: white;
+  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  background-color: #686868;
+  opacity: 100%;
+  cursor: pointer;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -31,33 +27,27 @@
   margin-top: 30px;
   margin-bottom: 30px;
   border: none;
-  font-weight: 600;
 }
 
 .commanderbtn {
-  border-radius: 20px;
-  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
-  padding: 0.75rem 1.5rem;
-  font-weight: 500;
-  font-size: 1.1rem;
-  color: white;
-  box-shadow: 3px black;
-  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  background-color: #686868;
-  width: 300px;
-  opacity: 100%;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
-  font-weight: 100;
-  font-size: 1em;
+  border-radius: 30px;
   padding-top: 15px;
   padding-bottom: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-weight: 300;
+  font-size: 1em;
+  color: white;
+  box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  background-color: #686868;
+  opacity: 100%;
+  cursor: pointer;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   margin: auto;
   border: none;
-  font-weight: 600;
 }
 
 /*style boutons*/
@@ -71,7 +61,9 @@
 }
 
 .emptyheart {
-  grid-column: 1;
+  cursor: pointer;
+  text-align: right;
+  grid-column: 2;
   grid-row: 1;
   font-size: 30px;
   background-image: transparent;
@@ -85,7 +77,8 @@
 }
 
 .fullheart {
-  grid-column: 1;
+  text-align: right;
+  grid-column: 2;
   grid-row: 1;
   cursor: pointer;
   font-size: 30px;
@@ -130,7 +123,7 @@
   display: flex;
   cursor: pointer;
   background-color: #fafafa;
-  border-radius: 20px;
+  border-radius: 15px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
   padding: 1.5rem 1.5rem;
   margin-bottom: 20px;
@@ -139,6 +132,15 @@
 }
 .fonctionnement__carte:hover {
   background-color: #FBEFFD;
+}
+.fonctionnement__carte:hover .fonctionnement__icone {
+  color: #9356DC;
+}
+.fonctionnement__carte.active {
+  background-color: #FBEFFD;
+}
+.fonctionnement__carte.active .fonctionnement__icone {
+  color: #9356DC;
 }
 
 .fonctionnement__carte::after {
@@ -157,7 +159,7 @@
 }
 
 .foodcard {
-  border-radius: 20px;
+  border-radius: 15px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
   cursor: pointer;
   background-color: #fff;
@@ -170,13 +172,14 @@
 }
 .foodcard__text {
   flex-basis: 90%;
+  padding: 10px;
 }
 .foodcard__title {
   margin: 0;
   margin-bottom: -8px;
   margin-left: 5px;
-  font-weight: 1000;
   font-size: 1em;
+  font-weight: 500;
 }
 .foodcard__description {
   margin-bottom: 0;
@@ -187,14 +190,14 @@
 .foodcard__price {
   margin-right: 5px;
   margin-bottom: 0;
+  margin-top: 30px;
   text-align: right;
-  font-weight: 1000;
-  flex-basis: 30%;
+  font-weight: 500;
+  flex-basis: 100%;
 }
 .foodcard .checkcircle {
-  display: flex;
+  display: none;
   background-color: #99E2D0;
-  height: 43px;
   width: 67px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
@@ -202,7 +205,7 @@
 }
 
 .restaurants__cartes {
-  border-radius: 20px;
+  border-radius: 15px;
   box-shadow: 0px 5px 12px -4px rgba(145, 145, 145, 0.73);
   background-color: #fff;
   margin-bottom: 20px;
@@ -222,19 +225,27 @@
 .restaurants__cartes footer {
   display: grid;
   margin-left: 5px;
-  padding: 10px;
+  padding: 12px;
   color: black;
 }
 .restaurants__cartes h3 {
-  margin: 0;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 3px;
+  margin-left: 0px;
 }
 .restaurants__cartes .restaurants__quartier {
+  font-weight: 100;
   grid-column: 1;
 }
 .restaurants__cartes .favorite {
   grid-column: 2;
   text-align: right;
   grid-row: 1/3;
+}
+
+.carte2 .fullheart {
+  opacity: 100%;
 }
 
 /* style carte*/
@@ -290,7 +301,7 @@ main {
   }
   100% {
     opacity: 0;
-    z-index: 2;
+    z-index: -1;
   }
 }
 
@@ -301,7 +312,7 @@ main {
   }
   100% {
     opacity: 0;
-    z-index: 2;
+    z-index: -1;
   }
 }
 @-webkit-keyframes animationmain {
@@ -429,7 +440,6 @@ main {
   padding-top: 10px;
   padding-bottom: 10px;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-  padding-left: 14px;
 }
 .header__icon {
   margin-left: 10px;
@@ -456,7 +466,7 @@ body {
   font-size: 1.3rem;
   text-align: center;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-  background-color: #f3f3f3;
+  background-color: rgba(204, 204, 204, 0.45);
   padding: 0.75rem 1.5rem;
 }
 .localisation__text {
@@ -468,7 +478,7 @@ body {
 .explore {
   display: flex;
   flex-direction: column;
-  background-color: #fafafa;
+  background-color: rgba(242, 242, 242, 0.75);
   padding: 0.75rem 1.5rem;
 }
 .explore__title {
@@ -488,7 +498,7 @@ body {
   flex-direction: column;
 }
 .fonctionnement__title {
-  margin-left: 32px;
+  margin-left: 25px;
 }
 .fonctionnement__texte {
   margin-left: 32px;
@@ -538,8 +548,6 @@ body {
   display: grid;
   grid-column: 2;
   grid-row: 1/2;
-  text-align: right;
-  flex-basis: 5%;
   margin-right: 10px;
 }
 
@@ -553,7 +561,8 @@ body {
 .menu__header {
   font-family: Shrikhand;
   font-size: 1.5em;
-  padding-top: 22px;
+  padding-top: 30px;
+  padding-bottom: 10px;
   display: flex;
 }
 .menu__title {
@@ -578,17 +587,22 @@ body {
   display: block;
 }
 .menu__entrées {
+  font-weight: 100;
   flex-basis: 33%;
   -webkit-animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
           animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
 }
 .menu__plats {
+  font-weight: 100;
+  margin-top: 30px;
   flex-basis: 34%;
   opacity: 0;
   -webkit-animation: animationfoodcard 100ms linear 200ms normal forwards;
           animation: animationfoodcard 100ms linear 200ms normal forwards;
 }
 .menu__dessert {
+  font-weight: 100;
+  margin-top: 50px;
   flex-basis: 33%;
   opacity: 0;
   -webkit-animation: animationfoodcard 100ms linear 400ms normal forwards;
@@ -597,8 +611,10 @@ body {
 
 .foodtitle {
   margin-left: 15px;
+  font-weight: 300;
   position: relative;
   padding-bottom: 0.5rem;
+  font-size: 1em;
 }
 .foodtitle:after {
   content: "";
@@ -629,6 +645,8 @@ body {
 }
 .footer__logo {
   font-family: Shrikhand;
+  font-size: 1rem;
+  font-weight: 300;
   flex-basis: 100%;
   margin-left: 32px;
 }
@@ -644,6 +662,7 @@ body {
 }
 .footer li {
   margin-bottom: 5px;
+  font-weight: 500;
   text-decoration: none;
   color: white;
   border-bottom: 1px solid transparent;
