--- a/layout/sass/style.scss
+++ b/layout/sass/style.scss
@@ -12,7 +12,6 @@
     padding-top: 10px;
     padding-bottom: 10px;
     box-shadow: 0 0 0.5rem rgb(0 0 0 / 25%);
-    padding-left: 14px;
         &__icon{
             margin-left: 10px;
         }
@@ -39,7 +38,7 @@ body{
     font-size: 1.3rem;
     text-align: center;
     box-shadow: 0 0 0.5rem rgb(0 0 0 / 25%);
-    background-color: #f3f3f3;
+    background-color: rgb(204 204 204 / 45%);;
     padding: .75rem 1.5rem;
     &__text{
         margin-left: 10px;
@@ -51,7 +50,7 @@ body{
 .explore{
     display:flex;
     flex-direction: column;
-    background-color: $background;
+    background-color: rgb(242 242 242 / 75%);
     padding: .75rem 1.5rem;
     &__title{
         text-align: center;
@@ -70,7 +69,7 @@ body{
     display: flex;
     flex-direction: column;
         &__title{
-        margin-left: 32px;
+        margin-left: 25px;
         }
         &__texte{
         margin-left: 32px;
@@ -111,8 +110,6 @@ body{
         display: grid;
         grid-column: 2;
         grid-row: 1/2;
-        text-align: right;
-        flex-basis: 5%;
         margin-right: 10px;
     }
 }
@@ -126,7 +123,8 @@ body{
     &__header{
         font-family: Shrikhand;
         font-size: 1.5em;
-        padding-top: 22px;
+        padding-top: 30px;
+        padding-bottom: 10px;
         display: flex;
     }
     &__title{
@@ -151,15 +149,20 @@ body{
         display: block 
     }
     &__entrées{
+            font-weight: 100;
             flex-basis: 33%;
             animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
         }
     &__plats{
+            font-weight: 100;
+            margin-top: 30px;
             flex-basis: 34%;
             opacity: 0;
             animation: animationfoodcard 100ms linear 200ms  normal forwards;
         }
     &__dessert{
+            font-weight: 100;
+            margin-top: 50px;
             flex-basis: 33%;
             opacity: 0;
             animation: animationfoodcard 100ms linear 400ms  normal forwards;
@@ -168,8 +171,10 @@ body{
 
 .foodtitle{
     margin-left: 15px;
+    font-weight: 300;
     position: relative;
     padding-bottom: .5rem;
+    font-size: 1em;
     &:after{
         content: "";
         width: 3rem;
@@ -199,8 +204,10 @@ body{
     }
     &__logo{
         font-family: Shrikhand;
+        font-size: 1rem;
+        font-weight: 300;
         flex-basis: 100%;
-        margin-left: 32px;
+        margin-left: 32px;   
     }
     &__title{
         font-family: Shrikhand;
@@ -214,6 +221,7 @@ body{
     }
     li{
         margin-bottom: 5px;
+        font-weight: 500;
         text-decoration: none;
         color: white;
         border-bottom: 1px solid transparent;
