--- a/utils/_mixin.scss
+++ b/utils/_mixin.scss
@@ -1,24 +1,22 @@
 @mixin cardradiusandshadow{
-    border-radius: 20px;
+    border-radius: 15px;
     box-shadow: 0px 5px 12px -4px rgba(145,145,145,0.73);
 }
 
 @mixin buttonlayout{
-    padding: .75rem 1.5rem;
-    font-weight: 500;
-    font-size: 1.1rem;
-    color: white;
-    box-shadow: 3px black;
-    background-image: linear-gradient( 0deg,rgba(147,86,220,.9),rgba(255,121,218,.9));
-    background-color: #686868;
-    width: 300px;
-    opacity: 100%;
-    box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
-    cursor: pointer;
-    font-weight: 100;
-    font-size: 1em;
+    border-radius: 30px;
     padding-top: 15px;
     padding-bottom: 15px;
+    padding-left: 40px;
+    padding-right: 40px;
+    font-weight: 300;
+    font-size: 1em;
+    color: white;
+    box-shadow: 0px 5px 12px -4px rgba(145,145,145,0.73);
+    background-image: linear-gradient( 0deg,rgba(147,86,220,.9),rgba(255,121,218,.9));
+    background-color: #686868;
+    opacity: 100%;
+    cursor: pointer;
 }
 
 @mixin photoradius{
