--- a/layout/sass/style.css
+++ b/layout/sass/style.css
@@ -102,6 +102,7 @@
 }
 
 .iconecercle {
+  font-size: 1.3em;
   background-color: #99E2D0;
   color: white;
   transform-origin: center;
@@ -193,14 +194,16 @@
   margin-top: 30px;
   text-align: right;
   font-weight: 500;
-  flex-basis: 100%;
 }
-.foodcard .checkcircle {
-  display: none;
+.foodcard__check {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #99E2D0;
-  width: 67px;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
+  width: 125px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
   opacity: 1;
 }
 
@@ -572,13 +575,12 @@ body {
   margin-left: 14px;
 }
 .menu__favorite {
-  margin-right: 10px;
   display: grid;
   grid-column: 2;
   grid-row: 1/2;
   text-align: right;
   flex-basis: 5%;
-  margin-right: 10px;
+  margin-right: 25px;
 }
 .menu__icone {
   margin: auto;
@@ -588,13 +590,14 @@ body {
 }
 .menu__entrées {
   font-weight: 100;
+  margin-bottom: 50px;
   flex-basis: 33%;
   -webkit-animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
           animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
 }
 .menu__plats {
   font-weight: 100;
-  margin-top: 30px;
+  margin-bottom: 50px;
   flex-basis: 34%;
   opacity: 0;
   -webkit-animation: animationfoodcard 100ms linear 200ms normal forwards;
@@ -602,7 +605,7 @@ body {
 }
 .menu__dessert {
   font-weight: 100;
-  margin-top: 50px;
+  margin-bottom: 50px;
   flex-basis: 33%;
   opacity: 0;
   -webkit-animation: animationfoodcard 100ms linear 400ms normal forwards;
