--- a/layout/sass/style.scss
+++ b/layout/sass/style.scss
@@ -134,13 +134,12 @@ body{
         margin-left:14px;
     }
     &__favorite{
-        margin-right:10px;
         display: grid;
         grid-column: 2;
         grid-row: 1/2;
         text-align: right;
         flex-basis: 5%;
-        margin-right: 10px;
+        margin-right: 25px;
     }
     &__icone{
         margin: auto;
@@ -150,19 +149,20 @@ body{
     }
     &__entrées{
             font-weight: 100;
+            margin-bottom: 50px;
             flex-basis: 33%;
             animation: animationfoodcard 100ms linear 1ms 1 normal forwards;
         }
     &__plats{
             font-weight: 100;
-            margin-top: 30px;
+            margin-bottom: 50px;
             flex-basis: 34%;
             opacity: 0;
             animation: animationfoodcard 100ms linear 200ms  normal forwards;
         }
     &__dessert{
             font-weight: 100;
-            margin-top: 50px;
+            margin-bottom: 50px;
             flex-basis: 33%;
             opacity: 0;
             animation: animationfoodcard 100ms linear 400ms  normal forwards;
