--- a/layout/composants/_cartes.scss
+++ b/layout/composants/_cartes.scss
@@ -69,7 +69,8 @@
             margin-bottom: 0;
             margin-left: 5px;
             font-size: 0.9em;
-            font-weight: 100;  
+            font-weight: 100; 
+            text-overflow: ellipsis; 
         }
             &__price{
             margin-right: 5px;
@@ -87,8 +88,17 @@
             width: 125px;
             border-top-right-radius: 15px;
             border-bottom-right-radius: 15px;
-            opacity: 1;
-        } 
+            opacity: 0;
+            width: 20px;
+            transition-duration: 0.75s;
+                &:hover{
+                    opacity: 1;
+                    width: 100px;
+                    &.iconecercle{
+                    rotate: 360deg;
+                    }
+                }
+            } 
 }
 
 .restaurants__cartes{
